--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,4 @@ jwt.expiration=86400000
 # ===============================
 # Server Configuration
 # ===============================
-server.port=8081
+server.port=${PORT:8080}
