--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 # ===============================
 # Database Configuration (MySQL)
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/routemaster
-spring.datasource.username=root
-spring.datasource.password=Ratlam@123
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 # ===============================
 # JPA / Hibernate
